--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
   max-width: none;
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+  text-align: left;
   list-style: none;
   box-sizing: border-box;
   line-height: 1.5;
@@ -32,10 +34,10 @@
   position: absolute;
   width: 26px;
   height: 2px;
-  background: linear-gradient(to right, rgba(50, 50, 50, 0), rgba(50, 50, 50, 1));
+  background: linear-gradient(to right, rgb(230, 255, 0, 0.5), rgba(80, 100, 0, 1));
 }
 #stgOnHtml .bullet.negative {
-  background: linear-gradient(to left, rgba(50, 50, 50, 0), rgba(50, 50, 50, 1));
+  background: linear-gradient(to left, rgba(80, 100, 0, 1), rgba(230, 255, 0, 0.5));
 }
 #stgOnHtml .balloon {
   position: absolute;
