--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,11 @@
   z-index: 10000;
 }
 #stgOnHtml * {
+  min-width: 0;
+  min-height: 0;
   max-width: none;
+  max-height: none;
+  background: none;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
