--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,9 @@
 .collides {
   border: 1px dashed !important;
 }
+.collides.landing {
+  z-index: 10000;
+}
 #stgOnHtml .scoreBoard {
   position: fixed;
   top: 20px;
